# kaos-pi

./: .gitignore  CHECKLIST.md  CMakeLists.txt  COMPLETION_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  README.md  SETUP.md  check_usb_gadget.sh  install.sh  run.sh  setup_usb_gadget.sh  test_upload.sh
skylanders/: .gitkeep
src/: main.c  portal.c  portal.h  usb_gadget.c  usb_gadget.h  web_server.c  web_server.h
src/crypto/: rijndael.h  skylander_crypt.c  skylander_crypt.h
